Finished pages- fixed bugs in pages

--- a/drama.html
+++ b/drama.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <header>
-    <img src="Facebook.jpg" alt="Satire">
-    <caption>Courtesy of the funny pictures blog.
-    The blog is no longer available.</caption>
+    <img src="Facebookfunnymeme.jpg" alt="Satire">
     <h1>Why to stay away from Facebook</h1>
     </header>
 <article>
@@ -22,7 +20,7 @@
     <li><a href="fakenews.html">Fake News</a></li>
     <li><a href="poorgrammar.html">Poor Grammar</a></li>
     <li><a href="screentime.html">Facebook Addiction</a></li>
-
+<li><a href="contactus.html"> Contact us</a></li>
   </ul>
 </nav>
 
@@ -35,8 +33,12 @@ prevelant on Facebook. With Facebook, we can air all of our dirty laundry with n
 code words like LOL and TTYL? What does that mean? Maybe it's my age, but why can't we just use regular words anymore?
 Like, laugh out loud and talk to you later? This Facebook thing I just don't get it.  </p>
 
-<img src="winkemoji.png" alt="Wink">
+<img id="meme" src="winkemoji.png" alt="Wink">
 
 </article>
+<footer>
+      <p id="footer">&copy;2018 Facebook Beware
+      Posted by&#58; Danelle VanVleet</p>
+    </footer>
   </body>
 </html>
