--- a/fakenews.html
+++ b/fakenews.html
@@ -9,8 +9,7 @@
   </head>
   <body>
     <header>
-    <img src="Facebook.jpg" alt="Satire">
-    <caption>CCourtesy of the funny pictures blog. The blog is no longer available.</caption>
+    <img src="Facebookfunnymeme.jpg" alt="Satire">
     <h1>Why to stay away from Facebook</h1>
     </header>
 <article>
@@ -21,10 +20,10 @@
     <li><a href="fakenews.html">Fake News</a></li>
     <li><a href="poorgrammar.html">Poor Grammar</a></li>
     <li><a href="screentime.html">Facebook Addiction</a></li>
-
+<li><a href="contactus.html"> Contact us</a></li>
   </ul>
 </nav>
-
+<img id="meme"src="Fakenews.jpg" alt="Fake">
 
 <h2>Attention, attention read all about it!</h2>
 
@@ -32,6 +31,9 @@
 Shh... don't tell. Oh wait, too late I saw it on Facebook. Oh, and did you know that so and so died? Don't
 do your own research to see if it's true, just believe everything you read.   </p>
 
+<footer>
+      <p id="footer">&copy;2018 Facebook Beware
+      Posted by&#58; Danelle VanVleet</p></footer>
 </article>
   </body>
 </html>
