--- a/screentime.html
+++ b/screentime.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
+        <h1>Why to stay away from Facebook</h1>
     <img src="Facebookfunnymeme.jpg" alt="Satire">
-    <h1>Why to stay away from Facebook</h1>
     </header>
 <article>
 <nav>
@@ -23,16 +23,20 @@
 <li><a href="contactus.html"> Contact us</a></li>
   </ul>
 </nav>
+<h2>Facebook, never enough screen time.</h2>
 
-<img id="meme"src="poorgrammar.jpg" alt="Meme">
-<h2>The meme say's it all....</h2>
-<p></p>
+<p>
+Who needs true interactions, when you can just text or message someone when they are right in the
+room? Forget your children going outside to play. Now is the time to just amelessly stare at your
+smart phones or computers for hours on end. I mean, you can watch videos, or just stare blankly at the screen.
+<strong>What more can we ask for?</strong>
+</thead>
+</p>
 
-<<footer>
+<footer>
       <p id="footer">&copy;2018 Facebook Beware
       Posted by&#58; Danelle VanVleet</p>
     </footer>
-
 </article>
   </body>
 </html>
