--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <header>
-    <img src="Facebook.jpg" alt="Satire">
-    <caption>CCourtesy of the funny pictures blog. The blog is no longer available.</caption>
-    <h1>Why to stay away from Facebook</h1>
+        <h1>Why to stay away from Facebook</h1>
+    <img src="Facebookfunnymeme.jpg" alt="Satire">
     </header>
 <article>
 <nav>
@@ -21,16 +20,18 @@
     <li><a href="fakenews.html">Fake News</a></li>
     <li><a href="poorgrammar.html">Poor Grammar</a></li>
     <li><a href="screentime.html">Facebook Addiction</a></li>
-
+<li><a href="contactus.html"> Contact us</a></li>
   </ul>
 </nav>
-
-
+<h2>Disclaimer</h2>
 <p> This page is strictly for fun. It is not to offend anyone.
   I use Facebook myself. I just thought it would be funny to come up with a site that shows the other side
 of the coin. </p>
 
-
+<footer>
+      <p id="footer">&copy;2018 Facebook Beware
+      Posted by&#58; Danelle VanVleet</p>
+    </footer>
 </article>
   </body>
 </html>
